# ErmAI

./: LICENSE  README.md  __init__.py  index.html  pyproject.toml  tools.py
src/ErmAI/: tools.py
src/ermai/: __init__.py  billy.py  tools.py
